# speechCOMET

./: .gitignore  .gitmodules  README.md  pyproject.toml
QE-baselines/: run_eval.py  run_eval_shuffled_src.py
baselines-QE/: baseline_eval.py  baseline_eval_shuffled.py
configs/: trainer.yaml  trainer_10ep.yaml  trainer_1gpu_accum16.yaml  trainer_4gpu_accum2.yaml  trainer_4gpu_accum4.yaml  trainer_orkney.yaml  trainer_orkney_10ep.yaml  trainer_orkney_accum4.yaml
data-preparation/: 01-get_data_text.py  02-ttspm_text.py  02-ttspm_text.sh  03-prepare_contraprost.py  03-prepare_mustshe.py  04-prepare_contraprost_emotion_probe.py  04-prepare_contraprost_intonation_probe.py  04-prepare_linguistic_features_probe.py
eval_scripts/: run_inf.py  run_inf.sh  run_inf_audio.sh  run_inf_text.sh  run_inf_textaudio.sh  run_wer_correlation_all.sh  wer_correlation_analysis.py
evaluation/: collect_combined_results.py  collect_contraprost_results.py  compare_shuffled_src.py  contraprost_eval.py  eval_utils.py  mustshe_eval.py  plot_score_distribution.py  run_inf.py  run_inf_shuffled_src.py  wer_correlation_analysis.py
iwslt2026/: audio_utils.py  eval_speechcomet.py  eval_speechllm.py  inspect_test_dataset.py
probing/: prepare_mustshe_gender_probe.py  probe_attribute.sh  probe_comet.py  probe_linguistic_feature_all.sh  probe_mustshe_all.sh
scripts/: 01-get_data_text.py  02-ttspm_text.py  03-wer_analysis.py  04-wer_correlation_analysis.py  inspect_sonar_layers.py
speechcomet-eval/: contraprost_eval.py  eval_utils.py  iwslt_eval.py  iwslt_eval_shuffled.py  mustshe_eval.py
(+157 files in other folders)
