[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "speechcomet"
version = "2.2.7"
description = "Speech Translation Evaluation"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12.0"
keywords = ["Machine Translation", "Evaluation", "COMET"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch==2.9.0",
    "torchaudio==2.9.0",
    "torchcodec==0.9.1+cu126",
    "torchvision==0.24.0",
    "pytorch-lightning===20211108",
    "torchmetrics==1.8.2",
    "transformers==4.57.6",
    "pyarrow==23.0.0",
    "sentencepiece==0.2.1",
    "pandas==3.0.0",
    "jsonargparse==4.45.0",
    "huggingface-hub==0.36.0",
    "protobuf==6.33.4",
    "fairseq2==0.7.0",
    "numpy==1.26.4",
    "sacrebleu==2.6.0",
    "scipy==1.17.0",
    "datasets==4.5.0",
    "entmax==1.3",
    "sonar-space==0.5.0",
    "tensorboard==2.20.0",
    "subset2evaluate==1.0.26",
    "accelerate==1.13.0",
    "peft==0.18.1",    
]


[project.scripts]
speechcomet-train = 'speechcomet.cli.train:train_command'
speechcomet-score = 'speechcomet.cli.score:score_command'
speechcomet-compare = 'speechcomet.cli.compare:compare_command'
speechcomet-mbr = 'speechcomet.cli.mbr:mbr_command'

[tool.setuptools]
packages = ["speechcomet"]